--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "imp"]
 	path = imp
 	url = git@github.com:thor314/imp.git
+[submodule "trycmd"]
+	path = trycmd
+	url = git@github.com:thor314/trycmd.git
